# 535961DevOps

./: Dockerfile  GITHUB-SECRETS-SETUP.md  PROJECT-STRUCTURE.md  README.md  REGISTRY-IMPLEMENTATION.md  labsuser.pem  quoter-bom.json  quoter-syft-sbom.json  trivy-docker-sbom-with-vulns.json  trivy-docker-sbom.json
.github/workflows/: build.yaml  postman-tests.yml
.postman/: api  api_4a7ed6fa-0052-4650-a654-8938928ef145
4.1-harbor-registry/: HARBOR-AUTHENTICATION-GUIDE.md  INDEX.md  PUSH-PULL-DEMONSTRATION.md  README.md  harbor-push-pull-demo.sh  harbor-values.yaml  install-harbor.sh  test-harbor.sh
4.2-dockerhub-tokens/: INDEX.md  README.md  kubernetes-setup.md  setup-k8s-token.sh  test-registries.sh
content/: app.py  pyproject.toml  quoter_templates.py  requirements.txt
kubernetes/: deployment-secure.yaml  deployment.yaml  harbor-deployment.yaml  network-policy.yaml
kubernetes/ingress/: create-tls-cert.sh  ingress-controller.yaml  ingress-resource.yaml  tls-secret.yaml
