[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Saxion"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.5"
markupsafe = ">=2.1.1"
# Requests added for demonstration - Flask already brings Jinja2
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
